--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/62d42077fc.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -25,8 +26,8 @@
                 <h4 class="banner-primary">Hi, I  am</h4> 
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sapiente fuga facilis minima aperiam voluptatibus neque ipsam et debitis, iure eligendi facere nobis perferendis architecto dolorum officiis deleniti ad! Aperiam.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -136,7 +137,7 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             
         </section>
